Some minor cleanup.